After the first review, all errors have been corrected. Margin, padding, gap...

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,13 @@
 /* место для вашего кода */
-.header__logo_image {
-  margin-left: -11.5px;
-  width: 148px;
-  height: 105px;
+.header__logo-img {
+  padding-right: 11px;
+  padding-left: 2px;
 }
 
 .header__logo {
   display: flex;
   grid-column: 6 / span 2;
-  justify-content: center;
+  justify-content: left;
   margin-left: 14px;
 }
 
@@ -52,13 +51,13 @@
 .header__address {
   text-wrap: nowrap;
   display: flex;
-  grid-column: 10 / -1;
+  grid-column: 9 / -1;
   flex-direction: column;
   justify-content: start;
   align-self: start;
   gap: 4px;
   margin-top: 7px;
-  margin-left: -2px;
+  padding-left: 85px;
   font-style: normal;
 }
 
@@ -73,8 +72,11 @@
   background-image: url(../images/cover.jpg);
   background-position: center;
   background-size: cover;
-  width: 1100px;
-  height: 757px;
+  padding-top: 165px;
+  padding-right: 50px;
+  padding-left: 50px;
+  min-width: 1100px;
+  min-height: 757px;
   color: white;
 }
 
@@ -82,51 +84,48 @@
   position: absolute;
   opacity: 60%;
   z-index: 1;
+  inset: 0 0 0 0;
   background-color: black;
-  width: 100%;
-  height: 100%;
 }
 
-.cover_title {
+.cover__title {
   position: relative;
-  top: 165px;
-  left: 50px;
   z-index: 2;
-  width: 1000px;
-  height: 355px;
+  margin-bottom: 127px;
   font-weight: 700;
   font-size: 100px;
   letter-spacing: 0.3em;
   text-transform: uppercase;
 }
 
-.aligned-text-left {
-  display: block;
-  position: relative;
+.text {
+  display: flex;
 }
 
-.aligned-text-center {
-  display: block;
-  padding: 9px 58px 0 0;
-  text-align: center;
+.text__end {
+  margin-left: 30px;
 }
 
-.aligned-text-right {
-  display: block;
-  padding: 3px 0 0 5px;
-  text-align: end;
+.text_center {
+  display: flex;
+  justify-content: center;
+  margin-top: 9px;
+  margin-right: 30px;
 }
 
-.letter-spacing-extended {
-  position: relative;
-  left: 30px;
+.text_right {
+  display: flex;
+  margin-top: 3px;
+  margin-left: 585px;
 }
 
 .cover__description {
-  position: absolute;
-  top: 667px;
-  left: 82px;
+  display: flex;
+  position: relative;
+  align-items: center;
+  gap: 77px;
   z-index: 2;
+  padding-left: 32px;
   font-weight: 400;
   font-size: 22px;
   line-height: 28px;
@@ -141,21 +140,18 @@
 .bet-button {
   display: flex;
   position: relative;
-  bottom: 40px;
-  left: 712px;
   justify-content: center;
   align-items: center;
   border: 1px solid white;
-  width: 256px;
-  height: 51px;
+  min-width: 256px;
+  min-height: 51px;
+  font-family: Raleway, sans-serif;
 }
 
 .lots {
-  position: relative;
-  top: 179px;
-  left: 24px;
-  width: 1052px;
-  height: 692px;
+  margin-top: 179px;
+  margin-right: 24px;
+  margin-left: 24px;
 }
 
 .lots__heading {
@@ -165,7 +161,8 @@
 }
 
 .lots__card-list {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 25px;
   margin-top: 27px;
 }
@@ -175,8 +172,8 @@
   position: relative;
   flex-direction: column;
   justify-content: space-between;
-  width: 334px;
-  height: 563px;
+  min-width: 334px;
+  min-height: 563px;
 }
 
 .lots__look-more-link {
@@ -191,6 +188,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-position: center;
+  background-size: cover;
   height: 100%;
 }
 
@@ -226,92 +225,83 @@
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-position: center;
-  background-size: cover;
-  height: 100%;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
 .about {
   position: relative;
-  top: 325px;
-  left: 24px;
-  width: 1052px;
-  height: 595px;
+  margin-top: 147px;
 }
 .about__column {
   display: grid;
   grid-template-columns: 1fr 2fr;
+  gap: 72px;
+  margin-right: 24px;
+  margin-left: 24px;
 }
 
 .about__logo {
+  display: flex;
   position: relative;
-  top: 35px;
-  left: 47px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 35px;
+  margin-bottom: 320px;
+  margin-left: 47px;
   border-radius: 50%;
   background-color: black;
-  width: 240px;
-  height: 240px;
 }
 
 .about__logo-img {
   position: relative;
-  top: 62px;
-  left: 46.48px;
-  width: 149px;
-  height: 114px;
+  padding: 61px 45px 64px 46.5px;
 }
 
 .about__content {
-  margin-top: 133px;
-  margin-left: 72px;
+  display: flex;
+  flex-direction: column;
+  gap: 101px;
+  padding-top: 133px;
 }
 
 .about__text {
   display: flex;
   position: relative;
-  top: 101px;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  width: 693px;
-  height: 314px;
+  gap: 26px;
+  min-width: 693px;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
   text-align: left;
 }
+
 .about__title {
   font-weight: 700;
   font-size: 40px;
   line-height: 46.96px;
   text-transform: uppercase;
 }
+
 .footer {
   display: flex;
-  position: relative;
-  top: 503px;
-  left: 26px;
-  justify-content: space-between;
+  justify-content: start;
+  gap: 185px;
+  margin: 178.5px 50px 91px 50px;
 }
 
 .footer__address {
+  text-wrap: wrap;
   display: flex;
   flex-direction: column;
-  margin-left: 25px;
-  width: 240px;
-  height: 97px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -319,25 +309,20 @@
 }
 
 .footer__menu {
-  margin-left: -77px;
+  min-width: 149px;
   font-weight: 400;
   font-size: 18px;
-  line-height: 21.13px;
+  line-height: 20.7px;
   text-align: center;
 }
 
 .footer__social-list {
   display: flex;
-  position: relative;
-  top: 1px;
-  left: -75px;
   flex-direction: row;
-  justify-content: space-between;
   gap: 48px;
-  text-decoration-style: none;
 }
 
 .footer__social-list-item {
-  width: 48px;
-  height: 48px;
+  min-width: 48px;
+  min-height: 48px;
 }
